<resources>
    <string name="app_name">Society Focus</string>
    <string name="desc_sf_login">Login to your society.\nYou can login only if your society is\nalready registered with us.</string>
    <string name="desc_sf_fb_login">Is your society not yet registered with\nsociety focus? You can login with facebook\nand explore the app.</string>

    <string name="facebook_app_id">1749929318576139</string>
    <string name="title_login">Login</string>
    <string name="hint_search_society">Search you society</string>
    <string name="title_activity_home_main">HomeMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="label_notice">Notice Board</string>
    <string name="label_see_all">See All</string>
    <string name="label_pay_rwa_fees">Pay your RWA dues</string>
    <string name="label_register_rwa"><b>Want to register with us?</b>\nFill the form and our team will get in touch with you asap</string>
    <string name="label_rwa">RWA</string>
    <string name="label_residents">Residents</string>
    <string name="label_complaint">Complaints</string>
    <string name="label_services">Services</string>
    <string name="label_car_search">Car Search</string>
    <string name="label_society_assets">Book society asset</string>
    <string name="title_search">Search</string>
    <string name="title_complaint_add">Register your complaint</string>
    <string name="title_activity_complaint_detail_fragment">ComplaintDetailFragment</string>

    <string name="progress_car_search">Searching...</string>
    <string name="car_search_no_result">No car matching your query was found.</string>
    <string name="car_search_no_result_complaint">Looks like an unauthorized car has come inside. Do you  want to raise a complaint regarding this.</string>
    <string name="search_car">Search for a car</string>
    <string name="msg_coming_soon">This feature is coming soon.</string>
    <string name="msg_only_society_feature">This feature is available only for registered RWAs.\nYou can check how this feature works in the demo section.</string>
    <string name="title_filter">Filter</string>
</resources>


