<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutAnimation="@anim/layout_anim_in"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_normal">

        <include layout="@layout/layout_notice_container" />

        <com.zircon.app.utils.ui.AspectRatioCardView
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:cardBackgroundColor="@color/purple_500"
            app:contentPaddingLeft="@dimen/spacing_normal"
            app:contentPaddingRight="@dimen/spacing_normal"
            app:ratio="0.2">

            <TextView
                style="@style/TextView.Header.Clickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_payment_white_transparent_72dp"
                android:gravity="center"
                android:text="@string/label_register_rwa" />
        </com.zircon.app.utils.ui.AspectRatioCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.zircon.app.utils.ui.AspectRatioCardView
                style="@style/CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:contentPadding="@dimen/spacing_normal">

                <TextView
                    android:id="@+id/tv_residents"
                    style="@style/TextView.Header.Clickable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_group_white_transparent_72dp"
                    android:gravity="center"
                    android:text="@string/label_residents" />

            </com.zircon.app.utils.ui.AspectRatioCardView>

            <com.zircon.app.utils.ui.AspectRatioCardView
                style="@style/CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorAccent"
                app:contentPadding="@dimen/spacing_normal">

                <TextView
                    android:id="@+id/tv_rwa"
                    style="@style/TextView.Header.Clickable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_group_work_white_transparent_72dp"
                    android:gravity="center"
                    android:text="@string/label_rwa" />

            </com.zircon.app.utils.ui.AspectRatioCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.zircon.app.utils.ui.AspectRatioCardView
                style="@style/CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/cyan_500"
                app:contentPadding="@dimen/spacing_normal">

                <TextView
                    android:id="@+id/tv_complaints"
                    style="@style/TextView.Header.Clickable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_bug_report_white_transparent_72dp"
                    android:gravity="center"
                    android:text="@string/label_complaint" />

            </com.zircon.app.utils.ui.AspectRatioCardView>

            <com.zircon.app.utils.ui.AspectRatioCardView
                style="@style/CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/orange_500"
                app:contentPadding="@dimen/spacing_normal">

                <TextView
                    style="@style/TextView.Header.Clickable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_business_center_white_transparent_72dp"
                    android:gravity="center"
                    android:text="@string/label_services" />

            </com.zircon.app.utils.ui.AspectRatioCardView>

        </LinearLayout>


        <com.zircon.app.utils.ui.AspectRatioCardView
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:cardBackgroundColor="@color/colorPrimary"
            app:contentPaddingLeft="@dimen/spacing_normal"
            app:contentPaddingRight="@dimen/spacing_normal"
            app:ratio="0.2">

            <TextView
                android:id="@+id/tv_car_search"
                style="@style/TextView.Header.Clickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_car_white_transparent_72dp"
                android:gravity="center"
                android:text="@string/label_car_search" />
        </com.zircon.app.utils.ui.AspectRatioCardView>


        <!--<com.zircon.app.utils.ui.AspectRatioCardView-->
        <!--style="@style/CardView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/spacing_normal"-->
        <!--app:cardBackgroundColor="@color/orange_500"-->
        <!--app:contentPaddingLeft="@dimen/spacing_normal"-->
        <!--app:contentPaddingRight="@dimen/spacing_normal"-->
        <!--app:ratio="0.2">-->

        <!--<TextView-->
        <!--style="@style/TextView.Header.Clickable"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center"-->
        <!--android:drawableLeft="@drawable/ic_book_white_transparent_72dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/label_society_assets" />-->
        <!--</com.zircon.app.utils.ui.AspectRatioCardView>-->

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>

