<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="1000dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_small">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="?actionBarSize"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/et_car_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Car number(ex. HR 22 AA 1234)"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_search" />


    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300">

        <LinearLayout
            android:id="@+id/ll_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/pb_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_car_search" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_no_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                style="@style/TextView.SubHeader.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_search_no_result" />

            <TextView
                style="@style/TextView.Content.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_search_no_result_complaint" />

            <Button
                android:id="@+id/btn_complaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Raise Complaint" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_result"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:visibility="invisible"
            app:contentPaddingBottom="@dimen/spacing_normal"
            app:contentPaddingTop="@dimen/spacing_normal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_car_no"
                    style="@style/TextView.Header.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:text="DL 2C AU 9588" />


                <TextView
                    android:id="@+id/tv_car_make"
                    style="@style/TextView.Header.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_car_no"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="Swift Dzire silver" />

                <TextView
                    android:id="@+id/tv_car_parking"
                    style="@style/TextView.Header.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_car_make"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="B3 197" />


                <View
                    android:id="@+id/view_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/tv_car_parking"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@color/grey_300" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/view_separator"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="@color/grey_500"
                    app:civ_border_width="2dp" />


                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextView.Header.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_separator"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_toRightOf="@id/iv_profile"
                    android:text="Sagar Khurana" />

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/TextView.SubHeader.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_toRightOf="@id/iv_profile"
                    android:text="F 1604" />


                <View
                    android:id="@+id/view_separator_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/iv_profile"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@color/grey_300" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_separator_2"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_normal"
                    android:weightSum="2">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        app:srcCompat="@drawable/ic_call_black_36dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        app:srcCompat="@drawable/ic_email_black_24dp" />

                </LinearLayout>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_init"
            style="@style/TextView.Header.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_car" />


    </FrameLayout>


</LinearLayout>